{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 1809,
  "lineage": "6fb9eb0b-ef61-bbe2-2f41-f0cd42e5c987",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:security-group/sg-04d752e50c82438c6",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04d752e50c82438c6",
            "ingress": [],
            "name": "tf-cluster-cluster-2024012407045034650000000f",
            "name_prefix": "tf-cluster-cluster-",
            "owner_id": "553186839963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-cluster-cluster",
              "env": "dev",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tf-cluster-cluster",
              "env": "dev",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:security-group/sg-0bcf86139c6b12e27",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0bcf86139c6b12e27",
            "ingress": [],
            "name": "tf-cluster-node-2024012407045028970000000e",
            "name_prefix": "tf-cluster-node-",
            "owner_id": "553186839963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf-cluster-node",
              "env": "dev",
              "kubernetes.io/cluster/tf-cluster": "owned",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "tf-cluster-node",
              "env": "dev",
              "kubernetes.io/cluster/tf-cluster": "owned",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2725185901",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04d752e50c82438c6",
            "security_group_rule_id": "sgr-0ece5de021797cc3e",
            "self": false,
            "source_security_group_id": "sg-0bcf86139c6b12e27",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3328442078",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0041aafd12216c2b6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-670167584",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-02c27d5e4ce23edde",
            "self": false,
            "source_security_group_id": "sg-04d752e50c82438c6",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1413775414",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0323744dd1c939b09",
            "self": false,
            "source_security_group_id": "sg-04d752e50c82438c6",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2634475424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0c77bf2ef144364fc",
            "self": false,
            "source_security_group_id": "sg-04d752e50c82438c6",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2388319105",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-09350da80601b3f0b",
            "self": false,
            "source_security_group_id": "sg-04d752e50c82438c6",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3942377546",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-029a746b6ab03cbef",
            "self": false,
            "source_security_group_id": "sg-04d752e50c82438c6",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1303478730",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0cdc14bf28f564b84",
            "self": false,
            "source_security_group_id": "sg-04d752e50c82438c6",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-682088266",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0e0172ad24ce6931d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-244926066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0dcb9bf6736ff0323",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2865161629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0e0ed5199dda9bcec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node_ssh",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ssh",
            "from_port": 22,
            "id": "sgrule-2192202923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bcf86139c6b12e27",
            "security_group_rule_id": "sgr-0c08cad35056539e9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.node",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:network-acl/acl-0227cddef78545c49",
            "default_network_acl_id": "acl-0227cddef78545c49",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0227cddef78545c49",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "553186839963",
            "subnet_ids": [
              "subnet-030ddd6251a0363ff",
              "subnet-04dacd5770a4a3a3d",
              "subnet-04e4fb1ab6d21ffbc",
              "subnet-06a9da90b3109fa0e",
              "subnet-087b8641ae016c207",
              "subnet-0dcc138f8f63ddb51"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:route-table/rtb-0ec53f58e70cdda30",
            "default_route_table_id": "rtb-0ec53f58e70cdda30",
            "id": "rtb-0ec53f58e70cdda30",
            "owner_id": "553186839963",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:security-group/sg-0f306b8a1eaca0460",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0f306b8a1eaca0460",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "553186839963",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-default",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07582377fb2ba471b",
            "domain": "vpc",
            "id": "eipalloc-07582377fb2ba471b",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-202-181-196.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.202.181.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0140394215414a497",
            "domain": "vpc",
            "id": "eipalloc-0140394215414a497",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-54-180-67-213.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.67.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074b6980a9f93b169",
            "domain": "vpc",
            "id": "eipalloc-074b6980a9f93b169",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-203-95-62.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.95.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:internet-gateway/igw-05783f7cac107fc33",
            "id": "igw-05783f7cac107fc33",
            "owner_id": "553186839963",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07582377fb2ba471b",
            "association_id": "eipassoc-0caca7aef315638c3",
            "connectivity_type": "public",
            "id": "nat-0c7194acf38f7f37d",
            "network_interface_id": "eni-07dc807100062ac49",
            "private_ip": "10.0.101.178",
            "public_ip": "43.202.181.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-087b8641ae016c207",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0140394215414a497",
            "association_id": "eipassoc-049aebdd5c27a8a84",
            "connectivity_type": "public",
            "id": "nat-03d39cfa64af05062",
            "network_interface_id": "eni-0aaeca7d1cf082022",
            "private_ip": "10.0.102.254",
            "public_ip": "54.180.67.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04dacd5770a4a3a3d",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-074b6980a9f93b169",
            "association_id": "eipassoc-0c3b4e65bb92fbf47",
            "connectivity_type": "public",
            "id": "nat-03a6b7e5018f0846e",
            "network_interface_id": "eni-081fd395acff3fd08",
            "private_ip": "10.0.103.63",
            "public_ip": "43.203.95.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-030ddd6251a0363ff",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03b9b2529e6c7695e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7194acf38f7f37d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b9b2529e6c7695e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0654a4a7c300f3ceb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03d39cfa64af05062",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0654a4a7c300f3ceb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0045fbfcf154bb2531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03a6b7e5018f0846e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0045fbfcf154bb253",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05783f7cac107fc33",
            "id": "r-rtb-0ba6adb3caed4272d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba6adb3caed4272d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:route-table/rtb-03b9b2529e6c7695e",
            "id": "rtb-03b9b2529e6c7695e",
            "owner_id": "553186839963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:route-table/rtb-0654a4a7c300f3ceb",
            "id": "rtb-0654a4a7c300f3ceb",
            "owner_id": "553186839963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:route-table/rtb-0045fbfcf154bb253",
            "id": "rtb-0045fbfcf154bb253",
            "owner_id": "553186839963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:route-table/rtb-0ba6adb3caed4272d",
            "id": "rtb-0ba6adb3caed4272d",
            "owner_id": "553186839963",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0797cae7cbb69b069",
            "route_table_id": "rtb-03b9b2529e6c7695e",
            "subnet_id": "subnet-06a9da90b3109fa0e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb8306fe69362e2",
            "route_table_id": "rtb-0654a4a7c300f3ceb",
            "subnet_id": "subnet-04e4fb1ab6d21ffbc"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b027964d627d39c2",
            "route_table_id": "rtb-0045fbfcf154bb253",
            "subnet_id": "subnet-0dcc138f8f63ddb51"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031d367ea102bb52a",
            "route_table_id": "rtb-0ba6adb3caed4272d",
            "subnet_id": "subnet-087b8641ae016c207"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b34a2bcc3b5a7c61",
            "route_table_id": "rtb-0ba6adb3caed4272d",
            "subnet_id": "subnet-04dacd5770a4a3a3d"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc9f5acc1a135322",
            "route_table_id": "rtb-0ba6adb3caed4272d",
            "subnet_id": "subnet-030ddd6251a0363ff"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:subnet/subnet-06a9da90b3109fa0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a9da90b3109fa0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553186839963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:subnet/subnet-04e4fb1ab6d21ffbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4fb1ab6d21ffbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553186839963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:subnet/subnet-0dcc138f8f63ddb51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcc138f8f63ddb51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553186839963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-private-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:subnet/subnet-087b8641ae016c207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087b8641ae016c207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553186839963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public-ap-northeast-2a",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:subnet/subnet-04dacd5770a4a3a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04dacd5770a4a3a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553186839963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public-ap-northeast-2b",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:subnet/subnet-030ddd6251a0363ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030ddd6251a0363ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "553186839963",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc-public-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc-public-ap-northeast-2c",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01aa37194a4d48f8a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"].ap-northeast-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:553186839963:vpc/vpc-01aa37194a4d48f8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0227cddef78545c49",
            "default_route_table_id": "rtb-0ec53f58e70cdda30",
            "default_security_group_id": "sg-0f306b8a1eaca0460",
            "dhcp_options_id": "dopt-088c0692022102d47",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01aa37194a4d48f8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec53f58e70cdda30",
            "owner_id": "553186839963",
            "tags": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "eks-vpc",
              "Terraform": "true",
              "kubernetes.io/cluster/tf-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}